--- a/ICanShowYouTheWorld/ICanShowYouTheWorld.csproj
+++ b/ICanShowYouTheWorld/ICanShowYouTheWorld.csproj
@@ -276,6 +276,9 @@
     <Reference Include="assembly_valheim">
       <HintPath>..\libraries\assembly_valheim.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>..\UnityEngine.UI.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cheat.cs" />
