Add version tempolate

--- a/ICanShowYouTheWorld/ICanShowYouTheWorld.csproj
+++ b/ICanShowYouTheWorld/ICanShowYouTheWorld.csproj
@@ -284,6 +284,7 @@
     <Compile Include="Cheat.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers.cs" />
+    <Compile Include="VersionTemplate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
