--- a/ICanShowYouTheWorld/ICanShowYouTheWorld.csproj
+++ b/ICanShowYouTheWorld/ICanShowYouTheWorld.csproj
@@ -285,6 +285,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="VersionTemplate.cs" />
+    <Compile Include="UIManager.cs" />
+    <Compile Include="CheatCommands.cs" />
+    <Compile Include="InputManager.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
