--- a/ICanShowYouTheWorld/ICanShowYouTheWorld.csproj
+++ b/ICanShowYouTheWorld/ICanShowYouTheWorld.csproj
@@ -289,6 +289,10 @@
     <Compile Include="CheatCommands.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="Assets\CircleVisualizer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
